--- a/behrend-lion-ambassadors/app/assets/stylesheets/application.css
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/application.css
@@ -71,7 +71,7 @@ table {
 }
 #search-container {
 	background-color:#000000;
-	height:40px;
+	height:35px;
 	width:100%;
 }
 .divider {
@@ -81,11 +81,16 @@ table {
 }
 #header-container {
 	background-color:#262C3A;
-	height:160px;
+	height:135px;
 	width:100%;
 }
 #contents-container {
 	background-color:#2C76C7;
 	height:45px;
 	width:100%;
+}
+li {
+	color:white;
+	display:inline;
+	font-size:1.35em;
 }
