--- a/behrend-lion-ambassadors/app/assets/stylesheets/application.css
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/application.css
@@ -87,17 +87,24 @@ table {
 #contents-container {
 	background-color:#2C76C7;
 	height:45px;
-	position:relative;	/*align*/ /*used method 1 on http://phrogz.net/css/vertical-align/index.html to vertically align the ul*/
+	position:relative;	/*align ul vertically*/ /*used method 1 on http://phrogz.net/css/vertical-align/index.html to vertically align the ul*/
 	width:100%;
+
+	/*text-align:center;*/	/*align ul horizontally*/
 }
 ul {
-	height:22.5px;	/*align*/
-	margin-top:-11.25px;	/*align*/
-	position:absolute;	/*align*/
-	top:50%;	/*align*/
+	height:22.5px;	/*align ul vertically*/
+	margin-top:-11.25px;	/*align ul vertically*/
+	position:absolute;	/*align ul vertically*/
+	top:50%;	/*align ul vertically*/
+
+	/*margin-left:auto;*/	/*align ul horizontally*/
+	/*margin-right:auto;*/	/*align ul horizontally*/
 }
 li {
 	color:white;
 	display:inline-block;	 /*could have used inline, but inline-block looks better when shrinking page horizontally*/
 	font-size:1.35em;
+
+	/*text-align:center;*/	/*align ul horizontally*/
 }
