--- a/behrend-lion-ambassadors/app/assets/stylesheets/application.css
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/application.css
@@ -82,29 +82,64 @@ table {
 #header-container {
 	background-color:#262C3A;
 	height:135px;
+	text-align:center;
 	width:100%;
+}
+#image-container {
+	background-color:white; /*debug*/
+
+	display:inline-block;
+	width:1150px;
+}
+#image-container img {
+	float:left;
 }
 #contents-container {
 	background-color:#2C76C7;
 	height:45px;
 	position:relative;	/*align ul vertically*/ /*used method 1 on http://phrogz.net/css/vertical-align/index.html to vertically align the ul*/
+	text-align:center;
 	width:100%;
-
-	/*text-align:center;*/	/*align ul horizontally*/
 }
-ul {
-	height:22.5px;	/*align ul vertically*/
-	margin-top:-11.25px;	/*align ul vertically*/
+#ul-container {
+	display:inline-block;
+	width:1150px;
+}
+#ul-container ul {
+	height:45px;	/*align ul vertically*/
+	margin-top:-22.5px;	/*align ul vertically*/
 	position:absolute;	/*align ul vertically*/
 	top:50%;	/*align ul vertically*/
-
-	/*margin-left:auto;*/	/*align ul horizontally*/
-	/*margin-right:auto;*/	/*align ul horizontally*/
 }
-li {
+#ul-container ul li {
 	color:white;
 	display:inline-block;	 /*could have used inline, but inline-block looks better when shrinking page horizontally*/
-	font-size:1.35em;
-
-	/*text-align:center;*/	/*align ul horizontally*/
+	font-family: "Georgia", Times, serif;
+	font-size:1.25em;
+	margin:0;
+	padding:12px 25px;
+}
+#ul-container ul li a {
+    display: block;
+    height: 100%;
+    margin:0;
+    text-decoration: none;
+    width: 100%;
+}
+#ul-container ul li:hover {
+	background-color:#1F4E96;
+}
+#content {
+	background-color:#CECDCD;
+	text-align:center;
+}
+#sitemap-footer-container {
+	background-color:#262C3A;
+	height:400px;
+	width:100%;
+}
+#footer-container {
+	background-color:#000000;
+	height:125px;
+	width:100%;
 }
