--- a/behrend-lion-ambassadors/app/assets/stylesheets/application.css
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/application.css
@@ -86,10 +86,16 @@ table {
 	width:100%;
 }
 #image-container {
-	background-color:white; /*debug*/
+	/*background-color:white;*/ /*debug*/
 
 	display:inline-block;
 	width:1150px;
+
+	position:relative;
+  	top:50%;
+  	-ms-transform:translateY(-50%);
+  	-webkit-transform:translateY(-50%);
+  	transform:translateY(-50%);
 }
 #image-container img {
 	float:left;
