--- a/behrend-lion-ambassadors/app/views/layouts/application.html.erb
+++ b/behrend-lion-ambassadors/app/views/layouts/application.html.erb
@@ -58,6 +58,10 @@
 				<a href="#"><li>Photos</li></a>
 				<a href="#"><li>About</li></a>
 				<a href="#"><li>Contact</li></a>
+
+				<a href="#"><li><%= image_tag("facebook.png") %></li></a>
+				<a href="#"><li><%= image_tag("twitter.png") %></li></a>
+				<a href="#"><li><%= image_tag("instagram.png") %></li></a>
 			</ul>
 
 		</div>
