Social Media Buttons do not highlight when hovered

--- a/behrend-lion-ambassadors/app/views/layouts/application.html.erb
+++ b/behrend-lion-ambassadors/app/views/layouts/application.html.erb
@@ -51,18 +51,25 @@
 		<!-- ul-container div -->
 		<div id="ul-container">
 
-			<ul>
+			<!-- contents ul -->
+			<ul class="contents">
 				<a href="#"><li>Home</li></a>
 				<a href="#"><li>Join Us</li></a>
 				<a href="#"><li>Events</li></a>
 				<a href="#"><li>Photos</li></a>
 				<a href="#"><li>About</li></a>
 				<a href="#"><li>Contact</li></a>
+				
+				<!-- spacer div -->
+				<div id="spacer">
+				</div>
+				<!-- END spacer div -->
 
-				<a href="#"><li><%= image_tag("facebook.png") %></li></a>
-				<a href="#"><li><%= image_tag("twitter.png") %></li></a>
-				<a href="#"><li><%= image_tag("instagram.png") %></li></a>
+				<a href="#" class="img"><li><%= image_tag("facebook.png") %></li></a>
+				<a href="#" class="img"><li><%= image_tag("twitter.png") %></li></a>
+				<a href="#" class="img"><li><%= image_tag("instagram.png") %></li></a>
 			</ul>
+			<!-- END contents ul -->
 
 		</div>
 		<!-- END ul-container div -->
