--- a/behrend-lion-ambassadors/app/views/welcome/index.html.erb
+++ b/behrend-lion-ambassadors/app/views/welcome/index.html.erb
@@ -1,4 +1,25 @@
 <!-- content-box div -->
 <div id="content-box">
+	
+	<!-- content div -->
+	<div id="content">
+
+		<!-- image-box div -->
+		<div id="image-box">
+		</div>
+		<!-- END image-box div -->
+		
+		<!-- text-box div -->
+		<div id="text-box">
+		</div>
+		<!-- END text-box div -->
+
+	</div>
+	<!-- END content div -->
+
+	<!-- radio-buttons div -->
+	<div id="radio-buttons">
+	</div>
+	<!-- END radio-buttons div -->
 </div>
 <!-- END content-box div -->
