--- a/behrend-lion-ambassadors/app/assets/stylesheets/application.css
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/application.css
@@ -74,11 +74,13 @@ table {
 	height:35px;
 	width:100%;
 }
+
 .divider {
 	background-color:#50545E;
 	height:2px;
 	width:100%;
 }
+
 #header-container {
 	background-color:#262C3A;
 	height:135px;
@@ -100,24 +102,20 @@ table {
 #image-container img {
 	float:left;
 }
+
 #contents-container {
 	background-color:#2C76C7;
 	height:45px;
-	position:relative;	/*align ul vertically*/ /*used method 1 on http://phrogz.net/css/vertical-align/index.html to vertically align the ul*/
-	text-align:center;
+	/*align ul vertically used method 1 on http://phrogz.net/css/vertical-align/index.html to vertically align the ul*/
 	width:100%;
 }
 #ul-container {
-	display:inline-block;
 	width:1150px;
 }
-#ul-container ul {
-	height:45px;	/*align ul vertically*/
-	margin-top:-22.5px;	/*align ul vertically*/
-	position:absolute;	/*align ul vertically*/
-	top:50%;	/*align ul vertically*/
+#ul-container .contents {
+
 }
-#ul-container ul li {
+#ul-container .contents li {
 	color:white;
 	display:inline-block;	 /*could have used inline, but inline-block looks better when shrinking page horizontally*/
 	font-family: "Georgia", Times, serif;
@@ -125,25 +123,39 @@ table {
 	margin:0;
 	padding:12px 25px;
 }
-#ul-container ul li a {
-    display: block;
-    height: 100%;
+#ul-container .contents li a {
+    display:block;
+    height:100%;
     margin:0;
-    text-decoration: none;
-    width: 100%;
+    text-decoration:none;
+    width:100%;
 }
-#ul-container ul li:hover {
+#ul-container .contents li:hover {
 	background-color:#1F4E96;
 }
+#ul-container .contents li img {
+	height:25px;
+	width:25px;
+}
+#ul-container .contents .img li:hover {
+	background-color:transparent;
+}
+#spacer {
+	display:inline-block;
+	width:100px;
+}
+
 #content {
 	background-color:#CECDCD;
 	text-align:center;
 }
+
 #sitemap-footer-container {
 	background-color:#262C3A;
 	height:400px;
 	width:100%;
 }
+
 #footer-container {
 	background-color:#000000;
 	height:125px;
