--- a/behrend-lion-ambassadors/app/views/main/home.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/home.html.erb
@@ -6,6 +6,7 @@
 
 		<!-- image-box div -->
 		<div id="image-box">
+			<%= image_tag("home.jpg") %>
 		</div>
 		<!-- END image-box div -->
 		
@@ -21,5 +22,6 @@
 	<div id="radio-buttons">
 	</div>
 	<!-- END radio-buttons div -->
+	
 </div>
 <!-- END content-box div -->
