--- a/behrend-lion-ambassadors/app/views/main/about.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/about.html.erb
@@ -1,5 +1,22 @@
-<!-- content-box div -->
-<div id="content-box">
-	
+<div id="about">
+
+	<div id="words">
+
+		<div id="mission">
+			<h1>Lion Ambassador Mission:</h1>
+			<p>Lorep ipsum.</p>
+		</div>
+
+		<div id="history">
+			<h1>Lion Ambassador History:</h1>
+			<p>Lorep ipsum.</p>
+		</div>
+
+	</div>
+
+	<div id="pics">
+		<%= image_tag("mission.jpg") %>
+		<%= image_tag("history.jpg") %>
+	</div>
+
 </div>
-<!-- END content-box div -->
