--- a/behrend-lion-ambassadors/app/views/main/home.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/home.html.erb
@@ -1,8 +1,8 @@
-<!-- content-box div -->
-<div id="content-box">
-	
-	<!-- content div -->
-	<div id="content">
+<!-- content-box-home div -->
+<div id="content-box-home">
+
+	<!-- content-home div -->
+	<div id="content-home">
 
 		<!-- image-box div -->
 		<div id="image-box">
@@ -12,6 +12,7 @@
 		
 		<!-- text-box div -->
 		<div id="text-box">
+			<p>Lorep ipsum</p>
 		</div>
 		<!-- END text-box div -->
 
