--- a/behrend-lion-ambassadors/app/assets/stylesheets/about.css
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/about.css
@@ -1,3 +1,20 @@
-#content-box {
-	margin:0 50px;
+#about {
+	/*display:inline;*/
+	height:600px;
+	width:1150px;
+}
+#words {
+	background-color:#ffffff;
+	display:inline-block;
+	height:600px;
+	width:40%;
+}
+#pics {
+	display:inline-block;
+	float:right;
+	height:600px;
+	width:40%;
+}
+#pics img {
+	width:100%;
 }
