--- a/behrend-lion-ambassadors/app/assets/stylesheets/application.css
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 // = require 'about'
 
 /* BEGIN CSS RESET */
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -31,8 +31,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -43,7 +43,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -116,7 +116,7 @@ table {
 	margin:0;
 	overflow: hidden;
 	padding:0;
-	position: absolute;
+	position: relative;
 	width: 100%;
 }
 #ul-container {
