tried to get about partial to center, added content to join_us, fixed tag in contact

--- a/behrend-lion-ambassadors/app/assets/stylesheets/about.css
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/about.css
@@ -1,11 +1,14 @@
 #about {
+	background-color:#ff0000;
 	/*display:inline;*/
+	float:center;
 	height:600px;
 	width:1150px;
 }
 #words {
 	background-color:#ffffff;
 	display:inline-block;
+	float:left;
 	height:600px;
 	width:40%;
 }
