--- a/behrend-lion-ambassadors/app/views/main/about.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/about.html.erb
@@ -4,7 +4,7 @@
 
 		<div id="mission">
 			<h1>Lion Ambassador Mission:</h1>
-			<p>Lorep ipsum.</p>
+			<p>The mission of the Penn State Behrend Lion Ambassadors is to help students, alumni, and friends of the University realize that their involvement with Penn State can and should be a lifetime experience. Sponsored by the college's Office of Development and University Relations, the Lion Ambassadors share their pride, their enthusiasm and their commitment to Penn State and to the Behrend College.</p>
 		</div>
 
 		<div id="history">
