--- a/behrend-lion-ambassadors/app/views/emailcontroller/contact.html.erb
+++ b/behrend-lion-ambassadors/app/views/emailcontroller/contact.html.erb
@@ -1,6 +1,6 @@
 <!-- content-box div -->
 <div id="content-box">
-  <H1 id="title">Contact Us</H1>
+  <h1 id="title">Contact Us</h1>
   <br>
   <p>Need Lion Ambassador Volunteers?</p>
   <p>Send us an Email!</p>
