--- a/behrend-lion-ambassadors/app/views/emailcontroller/contact.html.erb
+++ b/behrend-lion-ambassadors/app/views/emailcontroller/contact.html.erb
@@ -1,5 +1,5 @@
-<!-- content-box div -->
-<div id="content-box">
+<!-- content-box-contact div -->
+<div id="content-box-contact">
   <h1 id="title">Contact Us</h1>
   <br>
   <p>Need Lion Ambassador Volunteers?</p>
@@ -24,4 +24,4 @@
   <br>
   <button id="sendbutton">Send Message</button>
 </div>
-<!-- END content-box div -->
+<!-- END content-box-email div -->
