--- a/behrend-lion-ambassadors/app/views/main/about.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/about.html.erb
@@ -1,6 +1,6 @@
-<div id="about">
+<div id="content-box-about">
 
-	<div id="words">
+	<div id="about-us-words">
 
 		<div id="mission">
 			<h1>Lion Ambassador Mission:</h1>
@@ -14,7 +14,7 @@
 
 	</div>
 
-	<div id="pics">
+	<div id="about-us-pics">
 		<%= image_tag("mission.jpg") %>
 		<%= image_tag("history.jpg") %>
 	</div>
