--- a/behrend-lion-ambassadors/app/assets/stylesheets/emailcontroller.scss
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/emailcontroller.scss
@@ -1,5 +1,11 @@
+#contact-box-contact {
+  background-color:#ffffff;
+  height:600px;
+  margin:0 auto;
+  width:1150px;
+}
 #title {
-  margin-top: 10px;
+  margin-top:10px;
   font-family:sans-serif;
   color: #414141;
   font-size:30px;
@@ -14,7 +20,6 @@
   border-color: #999999;
   text-align: right;
 }
-
 #emailbodyinput {
   display: inline-block;
   margin: 15px;
