--- a/behrend-lion-ambassadors/app/views/main/join_us.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/join_us.html.erb
@@ -1,4 +1,6 @@
-<h1>Interested in Joining?</h1>
-<p>Please visit our <%= link_to "OrgSync", "https://orgsync.com/24534/chapter" %> page!</p>
-
-
+<div id="content-box-join-us">
+	<div id="join-us-words">
+		<h1>Interested in Joining?</h1>
+		<p>Please visit our <%= link_to "OrgSync", "https://orgsync.com/24534/chapter" %> page!</p>
+	</div>
+</div>
