modified logo picture to contain words

--- a/behrend-lion-ambassadors/app/views/layouts/application.html.erb
+++ b/behrend-lion-ambassadors/app/views/layouts/application.html.erb
@@ -29,10 +29,12 @@
 		<!-- image-container -->
 		<div id="image-container">
 
-			<%= image_tag("logo.png") %>	<!-- rails for showing image -->
+			<%= image_tag("logo-new.png") %>	<!-- rails for showing image -->
 
 		</div>
 		<!-- END image-container -->
+
+
 
 	</div>
 	<!-- END header-container div -->
