Delete email controller in favor of new name.

--- a/behrend-lion-ambassadors/app/views/layouts/application.html.erb
+++ b/behrend-lion-ambassadors/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 		Contents
 
 		<yield>
-		
+
 		Footer??	-->
 <!-- CSS ids must be unique whereas class can be applied to many things -->
 
@@ -49,10 +49,10 @@
 
 				<%= link_to root_path do %><li>Home</li><% end %>
 				<%= link_to join_us_path do %><li>Join Us</li><% end %>
-				
-				
+
+
 				<%= link_to about_path do %><li>About</li><% end %>
-				<%= link_to contact_path do %><li>Contact</li><% end %>
+				<li>Contact</li>
 
 				<!-- spacer div -->
 				<div id="spacer">
