Functional Contact form WITHOUT validation/sanitization

--- a/behrend-lion-ambassadors/app/views/layouts/application.html.erb
+++ b/behrend-lion-ambassadors/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
 
 
 				<%= link_to about_path do %><li>About</li><% end %>
-				<li>Contact</li>
+			  <%= link_to contact_path do %><li>Contact</li><% end %>
 
 				<!-- spacer div -->
 				<div id="spacer">
