--- a/behrend-lion-ambassadors/app/assets/stylesheets/application.css
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/application.css
@@ -10,11 +10,14 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
+ *= require_tree
  */
-
+ /*
+  *= require rails_bootstrap_forms
+  */
 // = require 'home'
 // = require 'about'
+/**= require rails_bootstrap_forms*/
 
 /* BEGIN CSS RESET */
 /* http://meyerweb.com/eric/tools/css/reset/
