--- a/behrend-lion-ambassadors/app/views/main/home.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/home.html.erb
@@ -11,12 +11,12 @@
 	<div id="content-home">
 
 		<div class="owl-carousel owl-theme">
-          
+
 		  <div class="carousel-img"><%= image_tag("home.jpg") %></div>
 		  <div class="carousel-img"><%= image_tag("carousel2.jpg") %></div>
-		 
+
 		</div>
-		
+
 		<!-- text-box div -->
 		<div id="text-box">
 			<h1>Welcome to the Penn State Behrend Lion Ambassadors Website!</h1>
@@ -30,12 +30,13 @@
 	<div id="radio-buttons">
 	</div>
 	<!-- END radio-buttons div -->
-	
+
 </div>
 <!-- END content-box div -->
 
 <script>
 $(document).ready(function(){
-  $('.owl-carousel').owlCarousel();
+  $('.owl-carousel').owlCarousel({
+	});
 });
 </script>
