--- a/behrend-lion-ambassadors/app/views/layouts/application.html.erb
+++ b/behrend-lion-ambassadors/app/views/layouts/application.html.erb
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>Behrend Lion Ambassadors</title>
+  <link rel="icon" type="image/x-icon" href="/assets/logo.ico" >
+  
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
