--- a/behrend-lion-ambassadors/app/views/layouts/application.html.erb
+++ b/behrend-lion-ambassadors/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Behrend Lion Ambassadors</title>
   <link rel="icon" type="image/x-icon" href="/assets/logo.ico" >
-  
+
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -55,6 +55,7 @@
 
 
 				<%= link_to about_path do %><li>About</li><% end %>
+        <%= link_to events_path do %><li>Events</li><% end %>
 			  <%= link_to contact_path do %><li>Contact</li><% end %>
 
 				<!-- spacer div -->
