Fix centering issue I created with the last events commit.

--- a/behrend-lion-ambassadors/app/views/emails/new.html.erb
+++ b/behrend-lion-ambassadors/app/views/emails/new.html.erb
@@ -3,16 +3,22 @@
 <h1>Have a Question For Us?</h1>
 <h1>Send Us an Email!</h1>
 <div id="contactform">
-  <%= bootstrap_form_for(@emails) do |f| %>
+  <%= bootstrap_form_for @emails, :html => { :id => "cform" } do |f| %>
     <%= f.text_field :name, label: " Your Name:  ",class: "narrowinput" %>
     <%= f.text_field :email, label: "Your Email:  ", class: "narrowinput" %><br />
     <%= f.text_field :subject, label: "Email Subject:",class: "narrowinput" %>
     <%= f.text_area :body, label: "Email Body:   ", id: "emailbodyinput" %>
-    <%= button_tag "Send", :onclick=>"return validate()", class: "button", id:"submitbutton" %>
+    <%= button_tag "Send", class: "button", id:"submitbutton" %>
   <% end %>
 </div>
 <script>
-function validate(){
-
-}
+$( document ).ready(function() {
+  $('#cform').submit(function(){
+    if (($('.narrowinput').val().length < 1)||()$('#emailbodyinput').val().length < 1)))
+      return false
+    else {
+      return true
+    }
+  });
+});
 </script>
