--- a/behrend-lion-ambassadors/app/views/main/events.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/events.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag "events" %>
-<div>
+<div id = "calendarDiv">
 <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;
 src=lionambassadorstest%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FNew_York"
 style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
