Replace lion logo with new one

--- a/behrend-lion-ambassadors/app/views/layouts/application.html.erb
+++ b/behrend-lion-ambassadors/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 		<!-- image-container -->
 		<div id="image-container">
 
-			<%= image_tag("logo-new.png") %>	<!-- rails for showing image -->
+			<%= image_tag("liologo4.png") %>	<!-- rails for showing image -->
 
 		</div>
 		<!-- END image-container -->
