--- a/behrend-lion-ambassadors/app/assets/stylesheets/home.css
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/home.css
@@ -5,7 +5,7 @@
 
 #content-box-home {
 	background-color:#ffffff;
-	height:560px;
+	height:600px;
 	margin:0 auto;
 	width:1150px;
 }
@@ -15,6 +15,11 @@
 #text-box {
 	text-align:center;
 }
+#mission-statement {
+	font-size: 1.3em;
+	font-family: "Calibri";
+	background-color: white;
+}
 #radio-buttons {
-	
+
 }
