--- a/behrend-lion-ambassadors/app/views/main/about.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/about.html.erb
@@ -1,22 +1,40 @@
 <div id="content-box-about">
-
 	<div id="about-us-words">
-
 		<div id="mission">
-			<h1>Lion Ambassador Mission:</h1>
-			<p>The mission of the Penn State Behrend Lion Ambassadors is to help students, alumni, and friends of the University realize that their involvement with Penn State can and should be a lifetime experience. Sponsored by the college's Office of Development and University Relations, the Lion Ambassadors share their pride, their enthusiasm and their commitment to Penn State and to the Behrend College.</p>
+			<h1 class="subheader">What Are Lion Ambassadors?</h1>
+			<p class ="paragraph">	The Lion Ambassadors, “ordinary students with extraordinary pride,” are Penn State Behrend’s Student Alumni Corps who aim to communicate the University’s history, personality and traditions to students, alumni and friends through tours and programming.</p>
+			</br>
+			<p class ="paragraph">Sponsored by the college's Office of Development and University Relations, the Lion Ambassadors share their pride, their enthusiasm and their commitment to Penn State and to the Behrend College.</p>
+			</br>
+			<p class ="paragraph">Known for their trademark backwards walk, the Lion Ambassadors offer tours of campus to prospective and accepted students. In addition to these tours, the Lion Ambassadors also host events and programs throughout the year to further their mission to the University:  to foster the idea that involvement with Penn State is lifelong.
+				These include Midnight Bingo, Hanging of the Greens and Founder's Day Celebrations.<p>
 		</div>
-
 		<div id="history">
-			<h1>Lion Ambassador History:</h1>
-			<p>Lorep ipsum.</p>
+			<h1 class ="subheader">Lion Ambassador History</h1>
+			<p class="paragraph">After Irvin Kochel, administrative head of Penn State Behrend from 1954-1980, completed his tenure here and went to University Park, he had an office in Old Main, next to President John Oswald. One day, he was struck with the fact that he saw no students in Old Main. He went to the nearby Hetzel Union Building and sat down to lunch with students.
+				He asked them why there were no students in Old Main, and they told him, "Oh, we're not allowed." And "Oh, that's just administration," and so on.
+			</p></br>
+			<p class="paragraph">Kochel disagreed with the students. He gathered a group of nine students from University Park and from Commonwealth Campuses to discuss this.
+				They agreed that it would be good to have a student group to represent the student body and the administration in various ways.
+				"The greatest thing to show is students displayed in a positive fashion."
+			</p></br>
+			<p class="paragraph">He asked President Oswald for money to develop a logo and identifying items.
+				Oswald agreed with the Ambassadors concept, so he gave him the funding. He also gave the Ambassadors an office in Old Main.
+				Original membership came from the deans, each of whom were asked to choose five bright, alert students. Shortly, the response was overwhelming.
+				They had 160 openings for ambassadors and more than 2,000 applications.
+			</p></br>
+			<p class="paragraph">In the fall of 1982 Old Main was opened up for tours with ambassadors as tour guides. Now it is done twice each year.
+				The group began to be noticed at University Park, so deans from other campuses called Kochel to get him to their campuses and help them develop a similar group.
+			</p></br>
+			<p class="paragraph">Today there are ambassadors at every campus, and the concept has spread to other colleges and universities.
+			 	 The Lion Ambassadors have their own alumni association.
+			</p><br>
 		</div>
-
 	</div>
-
+<p>
 	<div id="about-us-pics">
-		<%= image_tag("mission.jpg") %>
+		<%= image_tag("tour.jpg") %>
+		<%= image_tag("Bingo.jpg") %>
 		<%= image_tag("history.jpg") %>
 	</div>
-
 </div>
