--- a/behrend-lion-ambassadors/app/views/main/home.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/home.html.erb
@@ -19,7 +19,7 @@
 
 		<!-- text-box div -->
 		<div id="text-box">
-			<h1>Welcome to the Penn State Behrend Lion Ambassadors Website!</h1>
+			<h1 id ="mission-statement">The mission of the Penn State Behrend Lion Ambassadors is to help students, alumni, and friends of the University realize that their involvement with Penn State can and should be a lifetime experience.</h1>
 		</div>
 		<!-- END text-box div -->
 
