--- a/behrend-lion-ambassadors/app/views/emails/new.html.erb
+++ b/behrend-lion-ambassadors/app/views/emails/new.html.erb
@@ -6,7 +6,7 @@
 <div id="form-main">
 <div id="form-div">
   <%= form_for @emails, :html => { :id => "form1", :class =>"form" } do |f| %>
-    <p><%= f.text_field :name,  id: "name", placeholder: "Your Name", class: "feedback-input" %></p>
+    <p><%= f.text_field :name,  id: "name", placeholder: "Your Name", class: "validate[required,custom[onlyLetter],length[0,100]]feedback-input" %></p>
     <p><%= f.text_field :email,  id: "email", class:"validate[required,custom[email]] feedback-input", placeholder:" Your Email" %><br /></p>
     <p><%= f.text_field :subject, id: "subject", class:"validate[required,custom[onlyLetter],length[0,100]] feedback-input", placeholder:"Subject" %></p>
     <p><%= f.text_area :body, class: "validate[required,length[6,300]] feedback-input", id:"comment", placeholder:"Body" %></p>
