--- a/behrend-lion-ambassadors/app/views/main/join_us.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/join_us.html.erb
@@ -1,6 +1,17 @@
-<div id="content-box-join-us">
+<div id="content-box-joinus">
 	<div id="join-us-words">
-		<h1>Interested in Joining?</h1>
-		<p>Please visit our <%= link_to "OrgSync", "https://orgsync.com/24534/chapter" %> page!</p>
+		<h1 class ="subheader">Interested in Joining?</h1>
+		<p class = "paragraph">At the start of each semester, we look to recruit new members who believe in the legacy of our alma mater and wish to dedicate themselves to serving the University as an Ambassador. This organization requires hard work and dedication from all of its members.
+			Lion Ambassadors are a dynamic and diverse group of student leaders who are united by their commitment to giving back to Penn State Behrend.
+		</p>
+		<p class = "paragraph">	<p class = "paragraph">Membership depends on many factors including applicant's interest in Lion Ambassadors, commitment to service, and enthusiasm for Penn State.
+			Selections will be made based on the completion of an application and a personal interview in front of a group of current ambassadors.
+			Potential members must have and maintain a 2.5 GPA.
+		</p>
+		<p class = "paragraph">The application can be found on the  <%= link_to "OrgSync", "https://orgsync.com/24534/chapter" %> Page.</p>
+		<p class ="paragraph"> Please visit our  <%= link_to "Calendar", events_path %> for application deadlines.</p>
+	</div>
+	<div id="about-us-pics">
+		<%= image_tag("OpenHouse.jpg") %>
 	</div>
 </div>
