--- a/behrend-lion-ambassadors/app/views/emails/new.html.erb
+++ b/behrend-lion-ambassadors/app/views/emails/new.html.erb
@@ -1,12 +1,12 @@
 <%= stylesheet_link_tag "emails" %>
-<h1>Need Lion Ambassador Volunteers?</h1>
-<h1>Have a Question For Us?</h1>
-<h1>Send Us an Email!</h1>
 <!-- <div id="contactformDiv"> -->
 <div id="form-main">
 <div id="form-div">
+  <h1 class ="instructions">Need Lion Ambassador Volunteers?</h1>
+  <h1 class ="instructions">Have a Question For Us?</h1>
+  <h1 class ="instructions" id= "lastinstruction">Send Us an Email!</h1>
   <%= form_for @emails, :html => { :id => "form1", :class =>"form" } do |f| %>
-    <p><%= f.text_field :name,  id: "name", placeholder: "Your Name", class: "validate[required,custom[onlyLetter],length[0,100]]feedback-input" %></p>
+    <p><%= f.text_field :name,  id: "name", placeholder: "Your Name", class: "validate[required,custom[onlyLetter],length[0,100]] feedback-input" %></p>
     <p><%= f.text_field :email,  id: "email", class:"validate[required,custom[email]] feedback-input", placeholder:" Your Email" %><br /></p>
     <p><%= f.text_field :subject, id: "subject", class:"validate[required,custom[onlyLetter],length[0,100]] feedback-input", placeholder:"Subject" %></p>
     <p><%= f.text_area :body, class: "validate[required,length[6,300]] feedback-input", id:"comment", placeholder:"Body" %></p>
