--- a/behrend-lion-ambassadors/app/views/main/join_us.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/join_us.html.erb
@@ -8,7 +8,7 @@
 			Selections will be made based on the completion of an application and a personal interview in front of a group of current ambassadors.
 			Potential members must have and maintain a 2.5 GPA.
 		</p>
-		<p class = "paragraph">The application can be found on the  <%= link_to "OrgSync", "https://orgsync.com/24534/chapter" %> Page.</p>
+		<p class = "paragraph">The application can be found on the  <%= link_to "OrgSync", "https://orgsync.com/24534/chapter", :target => "_blank" %> Page.</p>
 		<p class ="paragraph"> Please visit our  <%= link_to "Calendar", events_path %> for application deadlines.</p>
 	</div>
 	<div id="about-us-pics">
