add images to homepage

--- a/behrend-lion-ambassadors/app/views/main/home.html.erb
+++ b/behrend-lion-ambassadors/app/views/main/home.html.erb
@@ -15,6 +15,14 @@
 		  <div class="carousel-img"><%= image_tag("home.jpg") %></div>
 		  <div class="carousel-img"><%= image_tag("carousel2.jpg") %></div>
 
+		  <div class="carousel-img"><%= image_tag("image1.JPG") %></div>
+		  <div class="carousel-img"><%= image_tag("image2.JPG") %></div>
+		  <div class="carousel-img"><%= image_tag("image3.JPG") %></div>
+		  <div class="carousel-img"><%= image_tag("image4.JPG") %></div>
+		  <div class="carousel-img"><%= image_tag("image5.JPG") %></div>
+		  <div class="carousel-img"><%= image_tag("image6.JPG") %></div>
+		  <div class="carousel-img"><%= image_tag("image7.JPG") %></div>
+
 		</div>
 
 		<!-- text-box div -->
