--- a/behrend-lion-ambassadors/app/views/layouts/application.html.erb
+++ b/behrend-lion-ambassadors/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
 
 				<%= link_to "http://www.facebook.com/BehrendLionAmbassadors", class: "img", :target => "_blank" do %><li class="img"><%= image_tag("facebook.png") %></li><% end %>
 				<%= link_to "http://www.twitter.com/BehrendLA", class: "img", :target => "_blank" do %><li><%= image_tag("twitter.png") %></li><% end %>
-				<%= link_to "http://www.instagram.com/", class: "img", :target => "_blank" do %><li><%= image_tag("instagram.png") %></li><% end %>
+				<%= link_to "http://www.instagram.com/BehrendLA/", class: "img", :target => "_blank" do %><li><%= image_tag("instagram.png") %></li><% end %>
 
 			</ul>
 			<!-- END contents ul -->
